<resources>
    <string name="app_name">ColorApp</string>
    <!-- MainActivity layout item strings -->
    <string name="no_clothes">Nothing yet! Try adding some clothes!</string>
    <string name="outerwear_button">Outerwear</string>
    <string name="tops_button">Tops</string>
    <string name="bottoms_button">Bottoms</string>
    <string name="footwear_button">Footwear</string>
    <string name="add_new_button">Add New</string>

    <!--New Clothing Item Strings-->
    <string name="summer">Summer</string>
    <string name="fall">Fall</string>
    <string name="winter">Winter</string>
    <string name="spring">Spring</string>
    <string name="imageButton">Choose an image</string>
    <string name="colorPickerButton">Choose a color</string>
    <string name="save">Save</string>

    <!-- FAB labels-->
    <string name="fab_outerwear"></string>
    <string name="fab_tops"></string>
    <string name="fab_bottoms"></string>
    <string name="fab_footwear"></string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">SettingsActivity</string>
</resources>