<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/colorLayout"
        android:layout_width="360dp"
        android:layout_height="240dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/noClothesText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_clothes"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorLayout">

        <Button
            android:id="@+id/outerwear_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="outerwearOnClick"
            android:text="@string/outerwear_button" />

        <Button
            android:id="@+id/tops_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="topsOnClick"
            android:text="@string/tops_button" />

        <Button
            android:id="@+id/bottoms_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="bottomsOnClick"
            android:text="@string/bottoms_button" />

        <Button
            android:id="@+id/footwear_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="footwearOnClick"
            android:text="@string/footwear_button" />

    </LinearLayout>

    //
    <com.leinardi.android.speeddial.SpeedDialOverlayLayout
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:clickable_overlay="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <com.leinardi.android.speeddial.SpeedDialView
        android:id="@+id/speedDial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="2dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:layout_behavior="@string/speeddial_scrolling_view_snackbar_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:sdExpansionMode="top"
        app:sdMainFabAnimationRotateAngle="90"
        app:sdMainFabClosedSrc="@drawable/ic_add_white_24dp"
        app:sdOverlayLayout="@id/overlay" />

</androidx.constraintlayout.widget.ConstraintLayout>